Fix hero responsiveness and fix header link hover bug on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
 .App__header-text {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   margin-left: 0.25rem;
 }
 
@@ -24,6 +23,7 @@
 }
 
 .App__subheader-text {
+  max-width: 35rem;
   padding-left: 0.25rem;
   opacity: 0.6;
   line-height: 1.75rem;
@@ -36,7 +36,7 @@
 .App__hero-images {
   position: absolute;
   top: 8rem;
-  left: 55%;
+  right: 0;
   display: flex;
   gap: 1.5rem;
 }
@@ -213,4 +213,61 @@
     rgb(var(--blue)) 32.5rem,
     transparent 32.5rem
   );
+}
+
+@media (max-width: 1344px) {
+  .App__hero-images {
+    right: 6%;
+  }
+
+  .App__hero-images-right {
+    display: none;
+  }
+}
+
+@media (max-width: 1200px) {
+  .App__hero-images {
+    right: 0;
+  }
+
+  .App__subheader-text {
+    max-width: 30rem;
+  }
+}
+
+@media (max-width: 956px) {
+  .App__header-text h1 {
+    text-align: center;
+  }
+
+  .App__subheader-text {
+    max-width: 36rem;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+
+  .App__hero-btns {
+    margin: 0 auto;
+  }
+
+  .App__statistics {
+    justify-content: center;
+  }
+
+  .App__hero-images {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .App__header-text h1 {
+    font-size: 4rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .App__header-text h1 {
+    font-size: 3rem;
+  }
 }
