--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -21,6 +21,7 @@
 .Header__nav li::after {
   content: "";
   position: absolute;
+  left: 0;
   bottom: -0.25rem;
   display: block;
   width: 100%;
@@ -44,10 +45,6 @@
   padding: 0.5rem 1rem !important;
   z-index: 1;
   transform: scale(1.25);
-}
-
-/* Large Screens */
-@media (max-width: 1200px) {
 }
 
 /* Small Screens */
@@ -79,14 +76,22 @@
     padding: 0;
   }
 
-  .Header__nav li {
-    padding: 1rem 4rem;
+  .Header__nav a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 16rem;
+    height: 3rem;
+  }
+
+  .Header__nav li::after {
+    display: none;
   }
 
   .Header__auth-btns {
     position: absolute;
-    right: 5rem;
-    top: 31.5rem;
+    right: 6.75rem;
+    top: 30.5rem;
     opacity: 0;
     visibility: hidden;
     flex-direction: column;
@@ -102,8 +107,11 @@
 
 /* Tablets */
 @media (max-width: 768px) {
-}
+  .Header__nav {
+    right: 1.5rem;
+  }
 
-/* Mobile */
-@media (max-width: 480px) {
+  .Header__auth-btns {
+    right: 4.75rem;
+  }
 }
